# stlviz

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  deisgn_info.md  install.ps1  install.sh  linux_setup.sh
.github/workflows/: ci.yml
COMP 790 Submission/: README.md
include/: stlviz.hpp
include/vcore/: all.hpp  controller.hpp  model.hpp  view.hpp
include/vobj/: all.hpp  backing_type.hpp  basic_ops.hpp  colors.hpp  display.hpp  draw_dep.hpp  list.hpp  loc_info.hpp  operation.hpp  primitive.hpp  root_display.hpp  tree.hpp
include/vstd/: all.hpp  base.hpp  binary_search_tree.hpp  binary_tree.hpp  bitset.hpp  bubble_sort.hpp  deque.hpp  heap_sort.hpp  insertion_sort.hpp  merge_sort.hpp  primitive_wrappers.hpp  quick_sort.hpp  selection_sort.hpp  set.hpp  stack.hpp  vector.hpp
src/: main.cpp  test_main.cpp
src/vcore/: controller.cpp  model.cpp  view.cpp
src/vobj/: basic_ops.cpp  display.cpp  operation.cpp  root_display.cpp
user_study/: README.md
user_study/intersect_arrays'/: intersect_arrays_cout.cpp  intersect_arrays_stlviz.cpp  problem.md  solution.txt
user_study/max_path/: max_path_cout.cpp  max_path_stlviz.cpp  problem.md  solution.txt
user_study/max_subarr/: max_subarr_cout.cpp  max_subarr_stlviz.cpp  problem.md  solution.txt
user_study/nearest_higher/: nearest_higher_cout.cpp  nearest_higher_stlviz.cpp  problem.md  solution.md
user_study/num_smaller.cpp/: num_smaller_cout.cpp  num_smaller_stlviz.cpp  problem.md  solution.txt
user_study/sample/: problem.md  sample_cout.cpp  sample_stlviz.cpp  solution.txt
user_study/sum_queries/: problem.md  solution.txt  sum_queries_cout.cpp  sum_queries_stlviz.cpp
